--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_spring_mysql_example
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
+
+operation.schedule.delay=5000
+operation.service.query.limit=100
+
+executor.thread.amount=2
+executor.queue.capacity=500
